# mcd-ua-idw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  pyproject.toml
DOCS/: decisiones_de_diseno.md  etapa2_ingenieria.md  etapa4_publicacion.md
DOCS/Entrega TPG01/intro/: intro.html
DOCS/etapa4/: README.md  tablero_dp01_ventas_geo_score.html  tablero_dp02_dqm.html
alembic/: env.py
alembic/versions/: 4f0c2f7b2d8e_add_script_registration_uniqueness.py  7017d719de69_script_tracking_tables.py  9ea5f62ecfe7_dqm_tracking_models.py
migrations/: env.py  script.py.mako
skills/idw-design-decisions/: SKILL.md
skills/idw-operating-protocol/: SKILL.md
src/mcd_ua_idw/: __init__.py  config.py
src/mcd_ua_idw/db/: __init__.py  base.py  session.py
src/mcd_ua_idw/script_runner/: __init__.py  discovery.py  runner.py  sql_utils.py  tui.py
src/mcd_ua_idw/scripts/: crear_tablas_dqm.py  db_check.py  dummy_script.py  e0_p01_crear_tablas_dqm.py  e0_p01_crear_tablas_dqm.sql  e1_p01_crear_tablas_txt_sin_deps.py  e1_p01_crear_tablas_txt_sin_deps.sql  e1_p02_crear_tablas_tmp_sin_deps.py  e1_p02_crear_tablas_tmp_sin_deps.sql  e1_p03_cargar_txt_sin_deps.py  e1_p04_validar_tipos_sin_deps.py  e1_p05_perfilar_sin_deps.py  e1_p06_cargar_tmp_sin_deps.py  e1_p07_crear_tablas_txt_con_deps.py  e1_p07_crear_tablas_txt_con_deps.sql  e1_p08_crear_tablas_tmp_con_deps.py  e1_p08_crear_tablas_tmp_con_deps.sql  e1_p09_cargar_txt_con_deps.py  e1_p10_validar_tipos_con_deps.py  e1_p11_perfilar_con_deps.py  e1_p12_cargar_tmp_con_deps.py  e1_p13_validar_integridad_ref.py  e2_p01_crear_tablas_metadata.py  e2_p01_crear_tablas_metadata.sql  e2_p03_crear_modelo_dwa.py  (+31 more)
tests/: test_config.py  test_db_check.py  test_script_discovery.py  test_script_runner.py  test_script_runner_tui.py  test_session.py
(+9 files in other folders)
