[project]
name = "mcd-ua-idw"
version = "0.1.0"
description = "Data integration coursework with an async SQLAlchemy persistence layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "alembic-postgresql-enum>=1.10.0",
    "alembic-utils>=0.8.8",
    "black>=26.5.1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2,<3",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
db-check = "mcd_ua_idw.scripts.db_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcd_ua_idw"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
