[project]
name = "mcd-ua-idw"
version = "0.1.0"
description = "Data integration coursework with an async SQLAlchemy persistence layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "alembic-postgresql-enum>=1.10.0",
    "alembic-utils>=0.8.8",
    "black>=26.5.1",
    "greenlet>=3,<4",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2,<3",
    "sqlalchemy>=2.0,<3",
    "textual[syntax]>=8.2.7",
    "textual-dev>=1.8.0",
]

[project.scripts]
db-check = "mcd_ua_idw.scripts.util_db_check:main"
idw-scripts = "mcd_ua_idw.script_runner.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcd_ua_idw"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<2",
    "weasyprint>=69.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
